--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/lytappDB
 spring.datasource.username=postgres
 spring.datasource.password=1234qwer
 
+
 # JPA/Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -19,3 +20,32 @@ spring.web.cors.allowed-origins=http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
+###############THE FOLLOWING IS FOR TESTING###################
+
+# For testing - use H2 in-memory database
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#spring.datasource.initialization-mode=always
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=update
+
+
+# Show SQL queries
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console (Access at http://localhost:8080/h2-console)
+#spring.h2.console.enabled=true
+
+# CORS configuration
+#spring.web.cors.allowed-origins=http://localhost:3000
+#spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+#spring.web.cors.allowed-headers=*
+
+# Server port
+#server.port=8080
