--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 
+#Flyway-DB-migration Propery
+spring.flyway.baseline-on-migrate=true
+
+
 # Server Configuration
 server.port=8080
 
