--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ jwt.expiration=86400
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=lytwind25@gmail.com
-spring.mail.password=xcaf ikkg piwx ezwq
+spring.mail.password=xcafikkgpiwxezwq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
