Track application.properties and commit updated Payment related classes

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 ##### Untrack application.properties #############
-src/main/resources/application.properties
+##src/main/resources/application.properties
