--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,12 @@ spring.web.cors.allowed-headers=*
 jwt.secret=Z3RmOHFrMTIzNDU2Nzg5MGFiY2RlZmdoaWprbG1ub3BxcnN0dXZ3eHl6
 jwt.expiration=86400
 
+# ===============================
+# PAYSTACK SECRET KEY
+# ===============================
+#paystack-client.secret-key=sk_test_efb080988a2d7f152c9a36e92afa1c29d85c863e
+
+
 # =======================
 #   EMAIL (Gmail)
 # =======================
@@ -56,33 +62,6 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-
-## =========================================================
-##   EMAIL (Namecheap Private Email - SSL/Port 465)
-## =========================================================
-#
-## 1. Namecheap Host and Port for SSL
-#spring.mail.host=mail.privateemail.com
-#spring.mail.port=465
-#
-## 2. Your Namecheap Private Email Credentials (CHANGE THESE!)
-## NOTE: This email MUST exist on your Namecheap account.
-#spring.mail.username=app@lytxtreme.online
-#spring.mail.password=Bash@2025*#
-#
-## 3. Required Properties for SSL
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.ssl.enable=true
-#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-#spring.mail.properties.mail.smtp.socketFactory.port=465
-#spring.mail.properties.mail.smtp.starttls.enable=false # Recommended to explicitly disable if using SSL
-#
-## 4. Connection Timeouts and Debugging
-#spring.mail.properties.mail.smtp.connectiontimeout=5000
-#spring.mail.properties.mail.smtp.timeout=5000
-#spring.mail.properties.mail.smtp.writetimeout=5000
-#spring.mail.properties.mail.debug=true
-
 
 # =======================
 #   THYMELEAF
