Created .env file and docker-compose.yml files to store environment variables and containerize images respectively

--- a/.env
+++ b/.env
@@ -1,8 +1,25 @@
 # .env file content
-SPRING_DATASOURCE_URL=jdbc:mysql://host.docker.internal:3306/lytapp_db
-SPRING_DATASOURCE_USERNAME=root
-SPRING_DATASOURCE_PASSWORD=1234qwer
+#**************************************************************
+#THE FOLLOWING ARE CONTAINER TO LOCALHOST DB CONFIGURATION
+#*************************************************************
+#SPRING_DATASOURCE_URL=jdbc:mysql://host.docker.internal:3306/lytapp_db
+#SPRING_DATASOURCE_USERNAME=root
+#SPRING_DATASOURCE_PASSWORD=1234qwer
 
-JWT_SECRET=Z3RmOHFrMTIzNDU2Nzg5MGFiY2RlZmdoaWprbG1ub3BxcnN0dXZ3eHl6
-PAYSTACK_CLIENT_SECRET_KEY=sk_test_efb080988a2d7f152c9a36e92afa1c29d85c863e
-SPRING_MAIL_PASSWORD=dsallllfnucsozkm
+#JWT_SECRET=Z3RmOHFrMTIzNDU2Nzg5MGFiY2RlZmdoaWprbG1ub3BxcnN0dXZ3eHl6
+#PAYSTACK_CLIENT_SECRET_KEY=sk_test_efb080988a2d7f152c9a36e92afa1c29d85c863e
+#SPRING_MAIL_PASSWORD=dsallllfnucsozkm
+
+#***************************************************************************************
+# THE FOLLOWING CONFIGURATION ARE FOR CONTAINER APP TO CONTAINERIZED DB CONNECTION
+#***************************************************************************************
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=mydb
+MYSQL_USER=myuser
+MYSQL_PASSWORD=mypassword
+
+SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/mydb
+SPRING_DATASOURCE_USERNAME=myuser
+SPRING_DATASOURCE_PASSWORD=mypassword
+
+
