Updated the content of the lytapp image from lytapp:latest to lytapp:v1 in the  actions file i.e. docker-publish.yml

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -60,5 +60,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/lytapp:latest
+            ${{ secrets.DOCKER_USERNAME }}/lytapp:v1
             ${{ secrets.DOCKER_USERNAME }}/lytapp:${{ github.sha }}
