Updated the Paystack Adapter and added RestTemplate under Config directory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,8 +45,8 @@ jwt.expiration=86400
 
 # ===============================
 # PAYSTACK SECRET KEY
-# ===============================docker run -p 8080:8080 --env-file .env lytapp:v1
-#paystack-client.secret-key=sk_test_efb080988a2d7f152c9a36e92afa1c29d85c863e
+# ===============================
+paystack-client.secret-key=sk_test_efb080988a2d7f152c9a36e92afa1c29d85c863e
 
 
 # =======================
